# api-docs

./: .gitignore  .markdownlint.json  Aster API Overview.md  CHANGELOG.md  CONTRIBUTING.md  Difference between V1 and V3 interfaces.md  LICENSE  README.md  SECURITY.md  announcement-en.md  announcement-zh.md  announcement.md  apollox-finance-spot-api.md  apollox-finance-spot-api_CN.md  aster-api-key-registration.md  aster-broker-api-key-registration.md  aster-broker-deposit-withdrawal.md  aster-chain-rpc.md  aster-chain-rpc_CN.md  aster-deposit-withdrawal.md  aster-finance-api.md  aster-finance-api_CN.md  aster-finance-future-api.md  aster-finance-future-api_CN.md  aster-finance-futures-api-testnet.md  aster-finance-futures-api-v3.md  aster-finance-futures-api-v3_CN.md  aster-finance-futures-api.md  aster-finance-futures-api_CN.md  aster-finance-spot-api-testnet.md  aster-finance-spot-api-v3.md  aster-finance-spot-api.md  aster-finance-spot-api_CN-v3.md  aster-finance-spot-api_CN.md  broker-web-SDK  consolidation.js  kairos-lab-security-tools.md
.github/ISSUE_TEMPLATE/: doc-error.md  feature-request.md  missing-endpoint.md
.github/workflows/: ci.yml
RPC/: aster-chain-rpc.md  aster-chain-rpc_CN.md
V1(Legacy)/EN/: aster-finance-futures-api.md  aster-finance-spot-api.md
V1(Legacy)/中文/: aster-finance-futures-api_CN.md  aster-finance-spot-api_CN.md
V3(Recommended)/EN/: aster-chain.md  aster-finance-futures-api-testnet.md  aster-finance-futures-api-v3.md  aster-finance-prediction-api-tesetnet.md  aster-finance-prediction-api-v3.md  aster-finance-prediction-api.md  aster-finance-spot-api-testnet.md  aster-finance-spot-api-v3.md
V3(Recommended)/中文/: aster-chain_CN.md  aster-finance-futures-api-testnet_CN.md  aster-finance-futures-api-v3_CN.md  (+6 more)
bapi/: aster-bapi-en.md  aster-bapi-zh.md
demo/: aster-code.py  aster-deposit-withdrawal.md  consolidation.js  create-apikey-front.js  package.json  requirements.txt  sol_agent.py
docs/: aster-finance-spot-api.md  community-notes.md
sdk/python/: README.md  pyproject.toml
sdk/python/asterdex/: __init__.py  client.py
sdk/python/tests/: test_client.py
(+5 files in other folders)
