[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "asterdex-sdk"
version = "0.1.0"
description = "Community Python SDK for AsterDex V3 API — by Kairos Lab"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Kairos Lab", email = "dev@kairoslab.xyz"},
]
keywords = ["asterdex", "dex", "crypto", "trading", "web3", "api"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "requests>=2.28.0",
    "eth-account>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4.0",
    "mypy>=1.5",
    "types-requests>=2.28",
]

[project.urls]
Homepage = "https://github.com/Valisthea/aster-api-docs"
Documentation = "https://github.com/Valisthea/aster-api-docs/tree/main/sdk/python"
Repository = "https://github.com/Valisthea/aster-api-docs"
Issues = "https://github.com/Valisthea/aster-api-docs/issues"

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "S",    # flake8-bandit
    "UP",   # pyupgrade
]
ignore = [
    "S105",  # hardcoded password — false positives on param names
    "S106",  # same
    "S107",  # same
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]  # allow assert in tests

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
